--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -681,8 +681,8 @@ section {
 }
 
 .myButton {
-	box-shadow:inset 0px 39px 0px -24px #e67a73;
-	background-color:#e4685d;
+	box-shadow:inset 0px 39px 0px -24px #000000;
+	background-color:#000000;
 	border-radius:4px;
 	border:1px solid #ffffff;
 	display:inline-block;
@@ -692,15 +692,16 @@ section {
 	font-size:15px;
 	padding:6px 15px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #b23e35;
+	text-shadow:0px 1px 0px #000000;
 }
 .myButton:hover {
-	background-color:#eb675e;
+	background-color:#030303;
 }
 .myButton:active {
 	position:relative;
 	top:1px;
 }
+
 
 /*--------------------------------------------------------------
 # Services
